<resources>
    <string name="app_name">assignment1</string>
    <string name="name">enter_name</string>
    <string name="enter_first_name">enter_first_name</string>
    <string name="enter_phone_number">enter_phone_number</string>
    <string name="enter_email_address">enter_email_address</string>
    <string name="enter_designation">enter_designation</string>
    <string name="submit">submit</string>
    <string name="enter_name">enter_name</string>
</resources>