<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit"
        />


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_edit"
        />


    <EditText
        android:id="@+id/designation_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_designation"
        android:inputType="text"
        
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/designation_edit"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textStyle="italic"
        android:hint="@string/enter_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_btn"/>


    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:textStyle="italic"
        android:hint="@string/enter_phone_number"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_tv"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_address"
        android:textStyle="italic"
        android:hint="@string/enter_email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_tv"
        />



    <TextView
        android:id="@+id/data_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_designation"
        android:textStyle="italic"
        android:hint="@string/enter_designation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        />










</androidx.constraintlayout.widget.ConstraintLayout>